# python-ml-skills

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: plugin.json
code-review/: SKILL.md  examples.md
code-review/references/: architecture.md  consistency.md  deployment.md  documentation.md  quality.md  security.md  testing.md  tooling.md
docs/: USER_GUIDE.md  claude-code-skills-vs-mcp.md  mcp_example.md
docs/benchmarks/: benchmark.py  benchmark_report.txt
eda/references/: eda-analysis.md
examples/: data_connection_report.md  eda_amount_distribution.md  eda_status_distribution.md
references/: architecture.md  deployment.md  security.md
shared/: __init__.py  connection.py
skills/data-connector/: SKILL.md
skills/data-connector/scripts/: connect.py
skills/eda/: SKILL.md
skills/eda/scripts/: column_dist.py
skills/eda/tasks/: column_distribution.md
