[project]
name = "python-ml-skills"
version = "0.1.0"
description = "Machine Learning skills for agents - reusable EDA, data connection, and ML workflow tasks"
readme = "README.md"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
