[project]
name="python-ml-skills"
version="0.1.0"
description="Machine Learning skills for agents - reusable EDA, data connection, and ML workflow tasks"
readme="README.md"
requires-python=">=3.12"
dependencies = [
    "ruff>=0.14.10",
]

[tool.uv.workspace]
members=["packages/*"]

[tool.ruff]
line-length=120
target-version="py312"

[tool.ruff.lint]
select=[
    "A",    # flake8-builtins (detect shadowing of Python builtins)
    "ARG",  # flake8-unused-arguments (unused function arguments)
    "B",    # flake8-bugbear (likely bugs and design problems)
    "C90",  # mccabe (cyclomatic complexity, default max: 10)
    "E",    # pycodestyle errors (PEP 8 violations)
    "F",    # Pyflakes (unused imports, undefined names)
    "FURB", # refurb (modernize and improve Python code)
    "I",    # isort (import sorting and organization)
    "N",    # pep8-naming (naming convention violations)
    "PERF", # perflint (performance anti-patterns)
    "PTH",  # flake8-use-pathlib (prefer pathlib over os.path)
    "RET",  # flake8-return (improve return statements)
    "RUF",  # Ruff-specific rules (additional quality checks)
    "S",    # flake8-bandit (security vulnerability patterns)
    "SIM",  # flake8-simplify (code simplification suggestions)
    "UP",   # pyupgrade (modernize Python syntax for target version)
    "W"     # pycodestyle warnings (PEP 8 style warnings)
]

# Ignore specific rules that may be too strict for this project
ignore=[
    "S101",   # Allow assert statements (common in tests and data validation)
    "PERF203" # Allow try-except in loops (sometimes necessary)
]
